--- a/packages/uniasgmt/uniasgmt.cls
+++ b/packages/uniasgmt/uniasgmt.cls
@@ -10,15 +10,18 @@
 \newcommand{\ProblemSetType}{}
 \newcommand{\PSNumber}{}
 
+\newif\ifuniasgmt@name
 \newif\ifuniasgmt@course
+\newif\ifuniasgmt@asgmttype
 \newif\ifuniasgmt@asgmtnum
 
-\DeclareOptionX{name}{\renewcommand{\MyName}{#1}}
+\DeclareOptionX{name}{\renewcommand{\MyName}{#1}\uniasgmt@nametrue}
 \DeclareOptionX{course}{\renewcommand{\Course}{#1}\uniasgmt@coursetrue}
-\DeclareOptionX{asgmttype}{\renewcommand{\ProblemSetType}{#1}}
+\DeclareOptionX{asgmttype}{\renewcommand{\ProblemSetType}{#1}\uniasgmt@asgmttypetrue}
 \DeclareOptionX{asgmtnum}{\renewcommand{\PSNumber}{#1}\uniasgmt@asgmtnumtrue}
 \DeclareOptionX*{\PassOptionsToClass{\CurrentOption}{article}}
 
+% Default values for name and assignment type
 \ExecuteOptionsX{
   name=Lukas Boelling,
   asgmttype=Assignment
@@ -26,9 +29,17 @@
 
 \ProcessOptionsX\relax
 
+\ifuniasgmt@name
+\else
+  \ClassError{uniasgmt}{option "name" is undefined}
+\fi
 \ifuniasgmt@course
 \else
   \ClassError{uniasgmt}{option "course" is undefined}
+\fi
+\ifuniasgmt@asgmttype
+\else
+  \ClassError{uniasgmt}{option "asgmttype" is undefined}
 \fi
 \ifuniasgmt@asgmtnum
 \else
@@ -38,9 +49,10 @@
 
 \LoadClass{article}
 
-% Set margins and improve typesetting
+% Packages
 \RequirePackage[margin=1in]{geometry}
 \RequirePackage{microtype}
+\RequirePackage{booktabs}
 
 % This package and the following commands set the style of the page headers.
 \RequirePackage{fancyhdr}
