--- a/packages/unimath/unimath.sty
+++ b/packages/unimath/unimath.sty
@@ -24,6 +24,8 @@
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\sign}{sign}
 
+\newcommand{\ideal}[1]{\langle #1 \rangle}
+
 
 
 % Calculus
