--- a/packages/unistats/unistats.sty
+++ b/packages/unistats/unistats.sty
@@ -10,6 +10,7 @@
 \DeclareMathOperator{\MSE}{MSE}
 \DeclareMathOperator{\Bias}{Bias}
 \DeclareMathOperator{\Var}{Var}
+\DeclareMathOperator{\Poisson}{Poisson}
 
 \newcommand{\overbar}[1]{\mkern 1.5mu\overline{\mkern-1.5mu#1\mkern-1.5mu}\mkern 1.5mu}
 \newcommand{\samplemean}[1]{\overbar{#1}}
